<resources>
    <string name="app_name">InformaVies CAT</string>
    <string name="benvingut_uda">Benvingut/uda</string>
    <string name="si_us_plau_inicieu_la_sessi_amb_les_vostres_dades">Si us plau, inicieu la sessió amb les vostres dades:</string>
    <string name="i_forgot_my_password">"He oblidat la meva contrasenya"</string>
    <string name="recorda_m">Recorda\'m</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="informavies_cat">InformaVies CAT</string>
...
